@@ -1,7 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.612 2006/03/05 22:42:40 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.613 2006/03/06 15:33:42 agaffney Exp $
+
+  7 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  bootloader and partitioning external commands log to compile_output.log
 
   5 Mar 2006; Preston Cody <codeman@gentoo.org>
   add error catching and text to saving profile dialogs
